--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                 width="24"
                 height="24"
               >
-                <use href="./images/send.svg#icon-icon-send"></use>
+                <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
           </form>
@@ -504,7 +504,7 @@
       <div class="modal">
         <button class="form-exit-decor" type="button">
           <svg class="form-decor-icon" width="8" height="8">
-            <use href="./images/exit-btn-fix.svg#icon-exit-btn"></use>
+            <use href="./images/icons.svg#icon-exit-btn"></use>
           </svg>
         </button>
         <p class="form-title">Leave your contacts and we will call you back</p>
@@ -519,9 +519,7 @@
                 id="user-name"
               />
               <svg class="input-decor-icon" width="18" height="24">
-                <use
-                  href="./images/modal-icons-fix.svg#icon-name-input-decor"
-                ></use>
+                <use href="./images/icons.svg#icon-name-input-decor"></use>
               </svg>
             </div>
           </div>
@@ -535,9 +533,7 @@
                 id="user-phone"
               />
               <svg class="input-decor-icon" width="18" height="24">
-                <use
-                  href="./images/modal-icons-fix.svg#icon-phone-input-decor"
-                ></use>
+                <use href="./images/icons.svg#icon-phone-input-decor"></use>
               </svg>
             </div>
           </div>
@@ -551,9 +547,7 @@
                 id="user-email"
               />
               <svg class="input-decor-icon" width="18" height="24">
-                <use
-                  href="./images/modal-icons-fix.svg#icon-imail-input-decor"
-                ></use>
+                <use href="./images/icons.svg#icon-imail-input-decor"></use>
               </svg>
             </div>
           </div>
@@ -579,7 +573,7 @@
             <label class="checkbox-label" for="user-privacy"
               ><span class="checkbox-label-span">
                 <svg class="input-checkbox-icon" width="10" height="8">
-                  <use href="./images/check.svg#icon-Vector"></use></svg></span
+                  <use href="./images/icons.svg#icon-Vector"></use></svg></span
               >I accept the terms and conditions of the
               <a class="checkbox-privacy-link" href="">Privacy Policy</a>
             </label>
