--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     />
-    <title>goit-markup-hw-03</title>
+    <title>goit-markup-hw-06</title>
   </head>
   <body>
     <!-- HEADER PART -->
@@ -126,7 +126,7 @@
             <li class="team-list-card">
               <img
                 class="team-list-img"
-                src="./images/mark-guerrero-optimized.jpg"
+                src="./images/all-team-img/mark-guerrero-x1.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -171,7 +171,7 @@
             <li class="team-list-card">
               <img
                 class="team-list-img"
-                src="./images/tom-ford-optimized.jpg"
+                src="./images/all-team-img/tom-ford-x1.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -216,7 +216,7 @@
             <li class="team-list-card">
               <img
                 class="team-list-img"
-                src="./images/camila-garcia-optimized.jpg"
+                src="./images/all-team-img/camila-garcia-x1.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -261,7 +261,7 @@
             <li class="team-list-card">
               <img
                 class="team-list-img"
-                src="./images/daniel-wilson-optimized.jpg"
+                src="./images/all-team-img/daniel-wilson-x1.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
@@ -313,7 +313,7 @@
             <li class="portfolio-list-item">
               <div class="portfolio-item-box">
                 <img
-                  src="./images/bank-app.jpg"
+                  src="./images/desk-img/portfolio/bank-app-desk-x1.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -332,7 +332,7 @@
             <li class="portfolio-list-item">
               <div class="portfolio-item-box">
                 <img
-                  src="./images/phone-hand.jpg"
+                  src="./images/desk-img/portfolio/cashless-pay-desk-x1.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -351,7 +351,7 @@
             <li class="portfolio-list-item">
               <div class="portfolio-item-box">
                 <img
-                  src="./images/pc.jpg"
+                  src="./images/desk-img/portfolio/meditation-desk-app-x1.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -370,7 +370,7 @@
             <li class="portfolio-list-item">
               <div class="portfolio-item-box">
                 <img
-                  src="./images/car.jpg"
+                  src="./images/desk-img/portfolio/taxi-service-desk-x1.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -389,7 +389,7 @@
             <li class="portfolio-list-item">
               <div class="portfolio-item-box">
                 <img
-                  src="./images/phone-blue.jpg"
+                  src="./images/desk-img/portfolio/sccreen-illustrations-desk-x1.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -408,7 +408,7 @@
             <li class="portfolio-list-item">
               <div class="portfolio-item-box">
                 <img
-                  src="./images/girl-orange.jpg"
+                  src="./images/desk-img/portfolio/online-courses-desk-x1.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -500,7 +500,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-overlay">
+    <!-- <div class="modal-overlay">
       <div class="modal">
         <button class="form-exit-decor" type="button">
           <svg class="form-decor-icon" width="8" height="8">
@@ -581,6 +581,6 @@
           <button class="btn-send">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
