--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="modal-overlay">
+    <div class="modal-overlay">
       <div class="modal">
         <button class="form-exit-decor" type="button">
           <svg class="form-decor-icon" width="8" height="8">
@@ -581,6 +581,6 @@
           <button class="btn-send">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
