--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <title>goit-markup-hw-06</title>
   </head>
   <body>
-    <!-- HEADER PART -->
     <header class="header-border">
       <div class="container header-container">
         <nav class="navigation">
@@ -25,7 +24,7 @@
             >Web<span class="logo-black">Studio</span></a
           >
           <ul class="navigation-list">
-            <li class="navigation-list-decoration">
+            <li class="navigation-list current">
               <a class="navigation-list-item" href="./index.html">Studio</a>
             </li>
             <li><a class="navigation-list-item" href="">Portfolio</a></li>
@@ -46,12 +45,15 @@
             </li>
           </ul>
         </address>
+        <button class="burger" type="button">
+          <svg width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
-    <main>
-      <!-- BUTTON SECTION -->
-
+    <!-- <main>
       <section class="solutions">
         <div class="container">
           <h1 class="solutions-header">
@@ -60,7 +62,6 @@
           <button class="solutions-button" type="button">Order Service</button>
         </div>
       </section>
-      <!-- FEATURES SECTION -->
 
       <section class="section">
         <div class="container">
@@ -117,12 +118,11 @@
           </ul>
         </div>
       </section>
-      <!-- TEAM SECTION -->
+
       <section class="section team-section">
         <div class="container">
           <h2 class="section-header">Our Team</h2>
           <ul class="team-list">
-            <!-- Mark Guerrero -->
             <li class="team-list-card">
               <img
                 class="team-list-img"
@@ -167,7 +167,6 @@
               </div>
             </li>
 
-            <!-- Tom Ford -->
             <li class="team-list-card">
               <img
                 class="team-list-img"
@@ -212,7 +211,6 @@
               </div>
             </li>
 
-            <!-- Camila Garcia -->
             <li class="team-list-card">
               <img
                 class="team-list-img"
@@ -257,7 +255,6 @@
               </div>
             </li>
 
-            <!-- Daniel Wilson -->
             <li class="team-list-card">
               <img
                 class="team-list-img"
@@ -304,7 +301,6 @@
           </ul>
         </div>
       </section>
-      <!-- PORTFOLIO SECTION -->
 
       <section class="section">
         <div class="container">
@@ -428,8 +424,6 @@
         </div>
       </section>
     </main>
-
-    <!-- FOOTER PART -->
 
     <footer class="footer">
       <div class="container footer-container">
@@ -581,6 +575,6 @@
           <button class="btn-send">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
