--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
     </header>
 
-    <!-- <main>
+    <main>
       <section class="solutions">
         <div class="container">
           <h1 class="solutions-header">
@@ -73,8 +73,8 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="list-header">Strategy</h3>
-              <p class="list-text">
+              <h3 class="features-list-header">Strategy</h3>
+              <p class="features-list-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
@@ -85,8 +85,8 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="list-header">Punctuality</h3>
-              <p class="list-text">
+              <h3 class="features-list-header">Punctuality</h3>
+              <p class="features-list-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
@@ -97,8 +97,8 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="list-header">Diligence</h3>
-              <p class="list-text">
+              <h3 class="features-list-header">Diligence</h3>
+              <p class="features-list-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
@@ -109,8 +109,8 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="list-header">Technologies</h3>
-              <p class="list-text">
+              <h3 class="features-list-header">Technologies</h3>
+              <p class="features-list-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -119,7 +119,7 @@
         </div>
       </section>
 
-      <section class="section team-section">
+      <!-- <section class="section team-section">
         <div class="container">
           <h2 class="section-header">Our Team</h2>
           <ul class="team-list">
@@ -300,9 +300,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="section-header">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -422,10 +422,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="footer-logo-text-container">
           <a class="logo-footer-blue" href="./index.html"
@@ -493,8 +493,8 @@
           </form>
         </div>
       </div>
-    </footer>
-    <div class="modal-overlay">
+    </footer> -->
+    <!-- <div class="modal-overlay">
       <div class="modal">
         <button class="form-exit-decor" type="button">
           <svg class="form-decor-icon" width="8" height="8">
