--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
       </section>
 
-      <!-- <section class="section team-section">
+      <section class="section team-section">
         <div class="container">
           <h2 class="section-header">Our Team</h2>
           <ul class="team-list">
@@ -300,9 +300,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="section-header">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -422,7 +422,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- <footer class="footer">
