--- a/index.html
+++ b/index.html
@@ -308,12 +308,26 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
               <div class="portfolio-item-box">
-                <img
-                  src="./images/desk-img/portfolio/bank-app-desk-x1.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="./images/desk-img/portfolio/bank-app-desk-x1.jpg x1, ./images/desk-img/portfolio/bank-app-desk-x2.jpg x2"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/tab-img/portfolio/bank-app-tab-x1.jpg x1, ./images/tab-img/portfolio/bank-app-tab-x2.jpg x2"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/mob-img/portfolio/bank-app-mob-x1.jpg x1, ./images/mob-img/portfolio/bank-app-mob-x2.jpg x2"
+                    media="(min-width: 320px)"
+                  />
+                  <img
+                    src="./images/desk-img/portfolio/bank-app-desk-x1.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -327,12 +341,26 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-item-box">
-                <img
-                  src="./images/desk-img/portfolio/cashless-pay-desk-x1.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="./images/desk-img/portfolio/cashless-pay-desk-x1.jpg x1, ./images/desk-img/portfolio/cashless-pay-desk-x2.jpg x2"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/tab-img/portfolio/cashless-pay-tab-x1.jpg x1, ./images/tab-img/portfolio/cashless-pay-tab-x2.jpg x2"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/mob-img/portfolio/cashless-pay-mob-x1.jpg x1, ./images/mob-img/portfolio/cashless-pay-mob-x2.jpg x2"
+                    media="(min-width: 320px)"
+                  />
+                  <img
+                    src="./images/desk-img/portfolio/cashless-pay-desk-x1.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -346,12 +374,26 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-item-box">
-                <img
-                  src="./images/desk-img/portfolio/meditation-desk-app-x1.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="./images/desk-img/portfolio/meditation-desk-app-x1.jpg x1, ./images/desk-img/portfolio/meditation-desk-app-x2.jpg x2"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/tab-img/portfolio/meditation-tab-app-x1.jpg x1, ./images/tab-img/portfolio/meditation-tab-app-x2.jpg x2"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/mob-img/portfolio/meditation-mob-app-x1.jpg x1, ./images/mob-img/portfolio/meditation-mob-app-x2.jpg x2"
+                    media="(min-width: 320px)"
+                  />
+                  <img
+                    src="./images/desk-img/portfolio/meditation-desk-app-x1.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -365,12 +407,26 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-item-box">
-                <img
-                  src="./images/desk-img/portfolio/taxi-service-desk-x1.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="./images/desk-img/portfolio/taxi-service-desk-x1.jpg x1, ./images/desk-img/portfolio/taxi-service-desk-x2.jpg x2"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/tab-img/portfolio/taxi-service-tab-x1.jpg x1, ./images/tab-img/portfolio/taxi-service-tab-x2.jpg x2"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/mob-img/portfolio/taxi-service-mob-x1.jpg x1, ./images/mob-img/portfolio/taxi-service-mob-x2.jpg x2"
+                    media="(min-width: 320px)"
+                  />
+                  <img
+                    src="./images/desk-img/portfolio/taxi-service-desk-x1.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -384,12 +440,26 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-item-box">
-                <img
-                  src="./images/desk-img/portfolio/sccreen-illustrations-desk-x1.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="./images/desk-img/portfolio/sccreen-illustrations-desk-x1.jpg x1, ./images/desk-img/portfolio/sccreen-illustrations-desk-x2.jpg x2"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/tab-img/portfolio/sccreen-illustrations-tab-x1.jpg x1, ./images/tab-img/portfolio/sccreen-illustrations-tab-x2.jpg x2"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/mob-img/portfolio/sccreen-illustrations-mob-x1.jpg x1, ./images/mob-img/portfolio/sccreen-illustrations-mob-x2.jpg x2"
+                    media="(min-width: 320px)"
+                  />
+                  <img
+                    src="./images/desk-img/portfolio/sccreen-illustrations-desk-x1.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -403,12 +473,26 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-item-box">
-                <img
-                  src="./images/desk-img/portfolio/online-courses-desk-x1.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="./images/desk-img/portfolio/online-courses-desk-x1.jpg x1, ./images/desk-img/portfolio/online-courses-desk-x2.jpg x2"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/tab-img/portfolio/online-courses-tab-x1.jpg x1, ./images/tab-img/portfolio/online-courses-tab-x2.jpg x2"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/mob-img/portfolio/online-courses-mob-x1.jpg x1, ./images/mob-img/portfolio/online-courses-mob-x2.jpg x2"
+                    media="(min-width: 320px)"
+                  />
+                  <img
+                    src="./images/desk-img/portfolio/online-courses-desk-x1.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
