--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
       </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer-logo-text-container">
           <a class="logo-footer-blue" href="./index.html"
@@ -577,7 +577,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- <div class="modal-overlay">
       <div class="modal">
         <button class="form-exit-decor" type="button">
