--- a/index.html
+++ b/index.html
@@ -51,6 +51,76 @@
           </svg>
         </button>
       </div>
+      <div class="mob-menu">
+        <div>
+          <button class="mob-menu-button" type="button">
+            <svg class="mob-button-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-exit-btn"></use>
+            </svg>
+          </button>
+          <nav>
+            <ul class="mob-navigation-list">
+              <li class="mob-navigation-list">
+                <a class="mob-navigation-list-item-accent" href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li><a class="mob-navigation-list-item" href="">Portfolio</a></li>
+              <li><a class="mob-navigation-list-item" href="">Contacts</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div>
+          <address>
+            <ul class="mob-address-list">
+              <li>
+                <a
+                  class="mob-address-list-item"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="mob-address-list-item-accent" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+          <div class="mob-menu-media-icon-container">
+            <ul class="mob-menu-social-icon-list">
+              <li class="mob-menu-social-icon-list-item">
+                <a class="mob-menu-social-icon-link" href="">
+                  <svg class="mob-menu-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-menu-social-icon-list-item">
+                <a class="mob-menu-social-icon-link" href="">
+                  <svg class="mob-menu-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-menu-social-icon-list-item">
+                <a class="mob-menu-social-icon-link" href="">
+                  <svg class="mob-menu-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-menu-social-icon-list-item">
+                <a class="mob-menu-social-icon-link" href="">
+                  <svg class="mob-menu-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </header>
 
     <main>
@@ -578,7 +648,7 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="modal-overlay">
+    <div class="modal-overlay">
       <div class="modal">
         <button class="form-exit-decor" type="button">
           <svg class="form-decor-icon" width="8" height="8">
@@ -652,13 +722,13 @@
               ><span class="checkbox-label-span">
                 <svg class="input-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use></svg></span
-              >I accept the terms and conditions of the
+              ><span>I accept the terms and conditions of the</span>
               <a class="checkbox-privacy-link" href="">Privacy Policy</a>
             </label>
           </div>
           <button class="btn-send">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
