--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </svg>
         </button>
       </div>
-      <div class="mob-menu">
+      <div class="mob-menu-is-open">
         <div>
           <button class="mob-menu-button" type="button">
             <svg class="mob-button-icon" width="8" height="8">
