--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           </svg>
         </button>
       </div>
-      <div class="mob-menu-is-open">
-        <div>
+      <div class="mob-menu">
+        <div class="mob-menu-upper">
           <button class="mob-menu-button" type="button">
             <svg class="mob-button-icon" width="8" height="8">
               <use href="./images/icons.svg#icon-exit-btn"></use>
@@ -70,7 +70,7 @@
             </ul>
           </nav>
         </div>
-        <div>
+        <div class="mob-menu-lower">
           <address>
             <ul class="mob-address-list">
               <li>
@@ -380,22 +380,31 @@
               <div class="portfolio-item-box">
                 <picture>
                   <source
-                    srcset="./images/desk-img/portfolio/bank-app-desk-x2.jpg x2, ./images/desk-img/portfolio/bank-app-desk-x1.jpg x1"
+                    srcset="
+                      ./images/desk-img/portfolio/bank-app-desk-x2.jpg 2x,
+                      ./images/desk-img/portfolio/bank-app-desk-x1.jpg 1x
+                    "
                     media="(min-width: 1158px)"
                   />
                   <source
-                    srcset="./images/tab-img/portfolio/bank-app-tab-x2.jpg x2, ./images/tab-img/portfolio/bank-app-tab-x1.jpg x1"
+                    srcset="
+                      ./images/tab-img/portfolio/bank-app-tab-x2.jpg 2x,
+                      ./images/tab-img/portfolio/bank-app-tab-x1.jpg 1x
+                    "
                     media="(min-width: 768px)"
                   />
                   <source
-                    srcset="./images/mob-img/portfolio/bank-app-mob-x2.jpg x2, ./images/mob-img/portfolio/bank-app-mob-x1.jpg x1"
+                    srcset="
+                      ./images/mob-img/portfolio/bank-app-mob-x2.jpg 2x,
+                      ./images/mob-img/portfolio/bank-app-mob-x1.jpg 1x
+                    "
                     media="(min-width: 320px)"
                   />
                   <img
                     src="./images/desk-img/portfolio/bank-app-desk-x1.jpg"
                     alt="Banking App"
-                    width="360"
-                    height="300"
+                    width=""
+                    height=""
                   />
                 </picture>
                 <p class="portfolio-overlay">
@@ -413,22 +422,31 @@
               <div class="portfolio-item-box">
                 <picture>
                   <source
-                    srcset="./images/desk-img/portfolio/cashless-pay-desk-x1.jpg x1, ./images/desk-img/portfolio/cashless-pay-desk-x2.jpg x2"
+                    srcset="
+                      ./images/desk-img/portfolio/cashless-pay-desk-x2.jpg 2x,
+                      ./images/desk-img/portfolio/cashless-pay-desk-x1.jpg 1x
+                    "
                     media="(min-width: 1158px)"
                   />
                   <source
-                    srcset="./images/tab-img/portfolio/cashless-pay-tab-x1.jpg x1, ./images/tab-img/portfolio/cashless-pay-tab-x2.jpg x2"
+                    srcset="
+                      ./images/tab-img/portfolio/cashless-pay-tab-x2.jpg 2x,
+                      ./images/tab-img/portfolio/cashless-pay-tab-x1.jpg 1x
+                    "
                     media="(min-width: 768px)"
                   />
                   <source
-                    srcset="./images/mob-img/portfolio/cashless-pay-mob-x1.jpg x1, ./images/mob-img/portfolio/cashless-pay-mob-x2.jpg x2"
+                    srcset="
+                      ./images/mob-img/portfolio/cashless-pay-mob-x2.jpg 2x,
+                      ./images/mob-img/portfolio/cashless-pay-mob-x1.jpg 1x
+                    "
                     media="(min-width: 320px)"
                   />
                   <img
                     src="./images/desk-img/portfolio/cashless-pay-desk-x1.jpg"
                     alt="Banking App"
-                    width="360"
-                    height="300"
+                    width=""
+                    height=""
                   />
                 </picture>
                 <p class="portfolio-overlay">
@@ -446,22 +464,31 @@
               <div class="portfolio-item-box">
                 <picture>
                   <source
-                    srcset="./images/desk-img/portfolio/meditation-desk-app-x1.jpg x1, ./images/desk-img/portfolio/meditation-desk-app-x2.jpg x2"
+                    srcset="
+                      ./images/desk-img/portfolio/meditation-desk-app-x2.jpg 2x,
+                      ./images/desk-img/portfolio/meditation-desk-app-x1.jpg 1x
+                    "
                     media="(min-width: 1158px)"
                   />
                   <source
-                    srcset="./images/tab-img/portfolio/meditation-tab-app-x1.jpg x1, ./images/tab-img/portfolio/meditation-tab-app-x2.jpg x2"
+                    srcset="
+                      ./images/tab-img/portfolio/meditation-tab-app-x2.jpg 2x,
+                      ./images/tab-img/portfolio/meditation-tab-app-x1.jpg 1x
+                    "
                     media="(min-width: 768px)"
                   />
                   <source
-                    srcset="./images/mob-img/portfolio/meditation-mob-app-x1.jpg x1, ./images/mob-img/portfolio/meditation-mob-app-x2.jpg x2"
+                    srcset="
+                      ./images/mob-img/portfolio/meditation-mob-app-x2.jpg 2x,
+                      ./images/mob-img/portfolio/meditation-mob-app-x1.jpg 1x
+                    "
                     media="(min-width: 320px)"
                   />
                   <img
                     src="./images/desk-img/portfolio/meditation-desk-app-x1.jpg"
                     alt="Banking App"
-                    width="360"
-                    height="300"
+                    width=""
+                    height=""
                   />
                 </picture>
                 <p class="portfolio-overlay">
@@ -479,22 +506,31 @@
               <div class="portfolio-item-box">
                 <picture>
                   <source
-                    srcset="./images/desk-img/portfolio/taxi-service-desk-x1.jpg x1, ./images/desk-img/portfolio/taxi-service-desk-x2.jpg x2"
+                    srcset="
+                      ./images/desk-img/portfolio/taxi-service-desk-x2.jpg 2x,
+                      ./images/desk-img/portfolio/taxi-service-desk-x1.jpg 1x
+                    "
                     media="(min-width: 1158px)"
                   />
                   <source
-                    srcset="./images/tab-img/portfolio/taxi-service-tab-x1.jpg x1, ./images/tab-img/portfolio/taxi-service-tab-x2.jpg x2"
+                    srcset="
+                      ./images/tab-img/portfolio/taxi-service-tab-x2.jpg 2x,
+                      ./images/tab-img/portfolio/taxi-service-tab-x1.jpg 1x
+                    "
                     media="(min-width: 768px)"
                   />
                   <source
-                    srcset="./images/mob-img/portfolio/taxi-service-mob-x1.jpg x1, ./images/mob-img/portfolio/taxi-service-mob-x2.jpg x2"
+                    srcset="
+                      ./images/mob-img/portfolio/taxi-service-mob-x2.jpg 2x,
+                      ./images/mob-img/portfolio/taxi-service-mob-x1.jpg 1x
+                    "
                     media="(min-width: 320px)"
                   />
                   <img
                     src="./images/desk-img/portfolio/taxi-service-desk-x1.jpg"
                     alt="Banking App"
-                    width="360"
-                    height="300"
+                    width=""
+                    height=""
                   />
                 </picture>
                 <p class="portfolio-overlay">
@@ -512,22 +548,31 @@
               <div class="portfolio-item-box">
                 <picture>
                   <source
-                    srcset="./images/desk-img/portfolio/sccreen-illustrations-desk-x1.jpg x1, ./images/desk-img/portfolio/sccreen-illustrations-desk-x2.jpg x2"
+                    srcset="
+                      ./images/desk-img/portfolio/sccreen-illustrations-desk-x2.jpg 2x,
+                      ./images/desk-img/portfolio/sccreen-illustrations-desk-x1.jpg 1x
+                    "
                     media="(min-width: 1158px)"
                   />
                   <source
-                    srcset="./images/tab-img/portfolio/sccreen-illustrations-tab-x1.jpg x1, ./images/tab-img/portfolio/sccreen-illustrations-tab-x2.jpg x2"
+                    srcset="
+                      ./images/tab-img/portfolio/sccreen-illustrations-tab-x2.jpg 2x,
+                      ./images/tab-img/portfolio/sccreen-illustrations-tab-x1.jpg 1x
+                    "
                     media="(min-width: 768px)"
                   />
                   <source
-                    srcset="./images/mob-img/portfolio/sccreen-illustrations-mob-x1.jpg x1, ./images/mob-img/portfolio/sccreen-illustrations-mob-x2.jpg x2"
+                    srcset="
+                      ./images/mob-img/portfolio/sccreen-illustrations-mob-x2.jpg 2x,
+                      ./images/mob-img/portfolio/sccreen-illustrations-mob-x1.jpg 1x
+                    "
                     media="(min-width: 320px)"
                   />
                   <img
                     src="./images/desk-img/portfolio/sccreen-illustrations-desk-x1.jpg"
                     alt="Banking App"
-                    width="360"
-                    height="300"
+                    width=""
+                    height=""
                   />
                 </picture>
                 <p class="portfolio-overlay">
@@ -545,22 +590,31 @@
               <div class="portfolio-item-box">
                 <picture>
                   <source
-                    srcset="./images/desk-img/portfolio/online-courses-desk-x1.jpg x1, ./images/desk-img/portfolio/online-courses-desk-x2.jpg x2"
+                    srcset="
+                      ./images/desk-img/portfolio/online-courses-desk-x2.jpg 2x,
+                      ./images/desk-img/portfolio/online-courses-desk-x1.jpg 1x
+                    "
                     media="(min-width: 1158px)"
                   />
                   <source
-                    srcset="./images/tab-img/portfolio/online-courses-tab-x1.jpg x1, ./images/tab-img/portfolio/online-courses-tab-x2.jpg x2"
+                    srcset="
+                      ./images/tab-img/portfolio/online-courses-tab-x2.jpg 2x,
+                      ./images/tab-img/portfolio/online-courses-tab-x1.jpg 1x
+                    "
                     media="(min-width: 768px)"
                   />
                   <source
-                    srcset="./images/mob-img/portfolio/online-courses-mob-x1.jpg x1, ./images/mob-img/portfolio/online-courses-mob-x2.jpg x2"
+                    srcset="
+                      ./images/mob-img/portfolio/online-courses-mob-x2.jpg 2x,
+                      ./images/mob-img/portfolio/online-courses-mob-x1.jpg 1x
+                    "
                     media="(min-width: 320px)"
                   />
                   <img
                     src="./images/desk-img/portfolio/online-courses-desk-x1.jpg"
                     alt="Banking App"
-                    width="360"
-                    height="300"
+                    width=""
+                    height=""
                   />
                 </picture>
                 <p class="portfolio-overlay">
@@ -666,7 +720,7 @@
                 name="user-name"
                 id="user-name"
               />
-              <svg class="input-decor-icon" width="18" height="24">
+              <svg class="input-decor-icon" width="12" height="12">
                 <use href="./images/icons.svg#icon-name-input-decor"></use>
               </svg>
             </div>
@@ -680,7 +734,7 @@
                 name="user-phone"
                 id="user-phone"
               />
-              <svg class="input-decor-icon" width="18" height="24">
+              <svg class="input-decor-icon" width="12" height="12">
                 <use href="./images/icons.svg#icon-phone-input-decor"></use>
               </svg>
             </div>
@@ -694,7 +748,7 @@
                 name="user-email"
                 id="user-email"
               />
-              <svg class="input-decor-icon" width="18" height="24">
+              <svg class="input-decor-icon" width="12" height="12">
                 <use href="./images/icons.svg#icon-imail-input-decor"></use>
               </svg>
             </div>
@@ -722,7 +776,7 @@
               ><span class="checkbox-label-span">
                 <svg class="input-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use></svg></span
-              ><span>I accept the terms and conditions of the</span>
+              >I accept the terms and conditions of the
               <a class="checkbox-privacy-link" href="">Privacy Policy</a>
             </label>
           </div>
